Add server class

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js localhost:8100"
   },
   "dependencies": {
-    "http": "*"
+    "http": "0.0.1-security",
+    "node-fetch": "^2.6.1"
   }
 }
